# all-agentic-architectures

./: 404.html  CHANGELOG.md  benchmarks_raw.json  index.html  objects.inv  pyproject.toml  sitemap.xml
architectures/: index.html
architectures/01_reflection/: 01_reflection.ipynb  index.html
architectures/02_tool_use/: 02_tool_use.ipynb  index.html
architectures/03_react/: 03_react.ipynb  index.html
architectures/04_planning/: 04_planning.ipynb  index.html
architectures/05_multi_agent/: 05_multi_agent.ipynb  index.html
architectures/06_pev/: 06_pev.ipynb  index.html
architectures/07_blackboard/: 07_blackboard.ipynb  index.html
architectures/08_episodic_semantic_memory/: 08_episodic_semantic_memory.ipynb  index.html
architectures/09_tree_of_thoughts/: 09_tree_of_thoughts.ipynb  index.html
architectures/10_mental_loop/: 10_mental_loop.ipynb  index.html
architectures/11_meta_controller/: 11_meta_controller.ipynb  index.html
architectures/12_graph_memory/: 12_graph_memory.ipynb  index.html
architectures/13_ensemble/: 13_ensemble.ipynb  index.html
architectures/14_dry_run/: 14_dry_run.ipynb  index.html
architectures/15_rlhf_self_improvement/: 15_rlhf_self_improvement.ipynb  index.html
architectures/16_cellular_automata/: 16_cellular_automata.ipynb  index.html
architectures/17_reflexive_metacognitive/: 17_reflexive_metacognitive.ipynb  index.html
architectures/18_reflexion/: 18_reflexion.ipynb  index.html
architectures/19_self_discover/: 19_self_discover.ipynb  index.html
architectures/20_chain_of_verification/: 20_chain_of_verification.ipynb  index.html
architectures/21_self_consistency/: 21_self_consistency.ipynb  index.html
architectures/22_lats/: 22_lats.ipynb  index.html
architectures/23_agentic_rag/: 23_agentic_rag.ipynb  index.html
architectures/24_corrective_rag/: 24_corrective_rag.ipynb  index.html
architectures/25_self_rag/: 25_self_rag.ipynb  index.html
architectures/26_adaptive_rag/: 26_adaptive_rag.ipynb  index.html
architectures/27_graph_rag/: 27_graph_rag.ipynb  index.html
architectures/28_debate/: 28_debate.ipynb  index.html
architectures/29_voyager/: 29_voyager.ipynb  index.html
architectures/30_storm/: 30_storm.ipynb  index.html
architectures/31_memgpt/: 31_memgpt.ipynb  index.html
architectures/32_constitutional_ai/: 32_constitutional_ai.ipynb  index.html
architectures/33_swe_agent/: 33_swe_agent.ipynb  index.html
architectures/34_computer_use/: 34_computer_use.ipynb  index.html
architectures/35_agent_workflow_memory/: 35_agent_workflow_memory.ipynb  index.html
benchmarks/: index.html
getting-started/: index.html
getting-started/installation/: index.html
getting-started/providers/: index.html
getting-started/quickstart/: index.html
reference/: index.html
reference/architectures/: index.html
reference/base/: index.html
reference/evaluators/: index.html
reference/memory/: index.html
reference/tools/: index.html
search/: search_index.json
src/agentic_architectures/: __init__.py
stylesheets/: extra.css
tutorials/: index.html
tutorials/adding-your-own/: index.html
tutorials/deterministic-picker/: index.html
tutorials/memory/: index.html
