[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

# ============================================================================
#  Project metadata
# ============================================================================
[project]
name = "agentic-architectures"
version = "0.4.0"
description = "35+ production-grade agentic AI architectures (Reflection, ReAct, Planning, RAG variants, Reflexion, LATS, GraphRAG, Voyager, MemGPT, ...) implemented with LangGraph and runnable against any LLM provider (Nebius, OpenAI, Anthropic, Groq, Ollama, ...)."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
keywords = [
  "agents", "agentic", "llm", "langchain", "langgraph", "langsmith",
  "rag", "reflexion", "react", "tree-of-thoughts", "lats", "graphrag",
  "multi-agent", "ai", "openai", "anthropic", "nebius",
]
authors = [{ name = "Fareed Khan", email = "fareedhassankhan12@gmail.com" }]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Intended Audience :: Education",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

# ---- Core runtime dependencies (kept minimal — see [project.optional-dependencies]) ----
dependencies = [
  "langchain-core>=0.3.0",
  "langchain>=0.3.0",
  "langgraph>=0.2.50",
  "langsmith>=0.1.130",
  "pydantic>=2.7",
  "pydantic-settings>=2.5",
  "python-dotenv>=1.0",
  "rich>=13.7",
  "tenacity>=8.2",
  "typing-extensions>=4.12",
]

# ============================================================================
#  Optional dependency groups (extras)
# ============================================================================
[project.optional-dependencies]

# ----- LLM provider integrations (pick what you need) -----
nebius      = ["langchain-nebius>=0.1.3"]
openai      = ["langchain-openai>=0.2.0"]
anthropic   = ["langchain-anthropic>=0.2.0"]
groq        = ["langchain-groq>=0.2.0"]
ollama      = ["langchain-ollama>=0.2.0"]
together    = ["langchain-together>=0.2.0"]
fireworks   = ["langchain-fireworks>=0.2.0"]
mistral     = ["langchain-mistralai>=0.2.0"]
google      = ["langchain-google-genai>=2.0.0"]
huggingface = ["langchain-huggingface>=0.1.0"]

# ----- Tool integrations -----
tavily = ["langchain-tavily>=0.1.0"]

# ----- Memory backends -----
faiss  = ["faiss-cpu>=1.8", "langchain-community>=0.3.0"]
chroma = ["langchain-chroma>=0.1.4", "chromadb>=0.5"]
qdrant = ["langchain-qdrant>=0.2.0", "qdrant-client>=1.12"]
neo4j    = ["langchain-neo4j>=0.1.0", "neo4j>=5.20"]
networkx = ["networkx>=3.3"]

# ----- Numerical / scientific (used by cellular_automata, benchmarks) -----
science = ["numpy>=1.26", "pandas>=2.2", "matplotlib>=3.8"]

# ----- Convenience bundles -----
all-providers = [
  "langchain-nebius>=0.1.3",
  "langchain-openai>=0.2.0",
  "langchain-anthropic>=0.2.0",
  "langchain-groq>=0.2.0",
  "langchain-ollama>=0.2.0",
  "langchain-together>=0.2.0",
  "langchain-google-genai>=2.0.0",
]
all-memory = [
  "faiss-cpu>=1.8",
  "langchain-community>=0.3.0",
  "langchain-chroma>=0.1.4",
  "chromadb>=0.5",
  "langchain-qdrant>=0.2.0",
  "qdrant-client>=1.12",
  "langchain-neo4j>=0.1.0",
  "neo4j>=5.20",
  "networkx>=3.3",
]
all = [
  "agentic-architectures[all-providers,all-memory,tavily,science]",
]

# ----- Development tooling -----
dev = [
  "ruff>=0.7.0",
  "mypy>=1.13.0",
  "pre-commit>=3.8.0",
  "ipykernel>=6.29",
  "jupyter>=1.1",
]
test = [
  "pytest>=8.3",
  "pytest-cov>=5.0",
  "pytest-asyncio>=0.24",
  "nbval>=0.11",
  "papermill>=2.6",
]
docs = [
  "mkdocs>=1.6",
  "mkdocs-material>=9.5",
  "mkdocstrings[python]>=0.27",
  "mkdocs-jupyter>=0.25",
  "mkdocs-mermaid2-plugin>=1.2",
  "mkdocs-git-revision-date-localized-plugin>=1.2",
]

[project.urls]
Homepage      = "https://github.com/FareedKhan-dev/all-agentic-architectures"
Documentation = "https://fareedkhan-dev.github.io/all-agentic-architectures/"
Repository    = "https://github.com/FareedKhan-dev/all-agentic-architectures"
Issues        = "https://github.com/FareedKhan-dev/all-agentic-architectures/issues"
Changelog     = "https://github.com/FareedKhan-dev/all-agentic-architectures/blob/main/CHANGELOG.md"

# ============================================================================
#  Hatch build configuration
# ============================================================================
[tool.hatch.build.targets.wheel]
packages = ["src/agentic_architectures"]

[tool.hatch.build.targets.sdist]
include = [
  "src/agentic_architectures",
  "README.md",
  "LICENSE",
  "CHANGELOG.md",
  "pyproject.toml",
]

# ============================================================================
#  Ruff — lint + format
# ============================================================================
[tool.ruff]
line-length    = 120
target-version = "py310"
extend-exclude = ["notebooks", "docs", ".venv"]

[tool.ruff.lint]
select = [
  "E", "F", "W",        # pycodestyle + pyflakes
  "I",                  # isort
  "B",                  # flake8-bugbear
  "UP",                 # pyupgrade
  "SIM",                # flake8-simplify
]
ignore = [
  "E501",     # line-too-long — long assert messages and docstrings are fine
  "SIM105",   # contextlib.suppress over try/except/pass — try/except is clearer here
  "UP037",    # quoted annotations — sometimes needed for forward refs
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["E501", "F401"]

[tool.ruff.format]
quote-style    = "double"
indent-style   = "space"
line-ending    = "auto"

# ============================================================================
#  Mypy — type checking
# ============================================================================
[tool.mypy]
python_version             = "3.10"
strict                     = true
warn_unused_ignores        = true
warn_return_any            = true
warn_unreachable           = true
disallow_untyped_defs      = true
ignore_missing_imports     = true
namespace_packages         = true
explicit_package_bases     = true

[[tool.mypy.overrides]]
module = ["tests.*", "notebooks.*"]
disallow_untyped_defs = false

# ============================================================================
#  Pytest
# ============================================================================
[tool.pytest.ini_options]
minversion       = "8.0"
testpaths        = ["tests"]
addopts          = "-ra --strict-markers --strict-config"
markers = [
  "integration: hits real LLM/API endpoints (gated by RUN_INTEGRATION=1)",
  "slow: takes more than ~10 seconds",
]
asyncio_mode = "auto"

# ============================================================================
#  Coverage
# ============================================================================
[tool.coverage.run]
source = ["src/agentic_architectures"]
branch = true

[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
  "raise NotImplementedError",
  "if TYPE_CHECKING:",
  "if __name__ == .__main__.:",
]
show_missing = true
